--- a/start.html
+++ b/start.html
@@ -24,7 +24,7 @@
           <button
             id="prev"
             class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
-            <img src="images/RemixIcon_PNG_2510101623/skip-back-mini-line.png" class="w-4 h-4" />
+            <img src="skip-back-mini-line.png" class="w-4 h-4" />
             Previous
           </button>
 
@@ -32,7 +32,7 @@
             id="nxt"
             class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
             Next
-            <img src="images/RemixIcon_PNG_2510101623/skip-forward-mini-line.png" class="w-4 h-4" />
+            <img src="skip-forward-mini-line.png" class="w-4 h-4" />
           </button>
         </div>
 
@@ -43,7 +43,7 @@
           <button
             id="restart"
             class="bg-[#005e7c] hover:bg-[#0094c6] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
-            <img src="images/RemixIcon_PNG_2510101623/refresh-line.png" class="w-4 h-4" />
+            <img src="refresh-line.png" class="w-4 h-4" />
             Restart
           </button>
 
@@ -65,3 +65,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
