--- a/start.html
+++ b/start.html
@@ -16,23 +16,27 @@
     </header>
 
     <main class="flex-grow flex justify-center items-start mt-10 w-full">
-      <div class="bg-white w-[90%] max-w-sm p-6 rounded-lg shadow-md border border-gray-200 text-center">
-        <h1 id="question" class="text-lg font-semibold mb-4 text-[#000022]"></h1>
+      <div class="bg-white w-[90%] max-w-sm p-6 rounded-lg shadow-md border border-gray-200 relative text-center">
+        <p id="time" class="absolute top-3 right-3 font-semibold text-[#ff5722]"></p>
+
+        <h1 id="question" class="text-lg font-semibold mt-4 mb-4 text-[#000022]"></h1>
         <div id="answers" class="space-y-3 text-left"></div>
 
         <div class="flex justify-center mt-5 gap-3">
           <button
             id="prev"
+            type="submit"
             class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
-            <img src="skip-back-mini-line.png" class="w-4 h-4" />
+            <img src="images/RemixIcon_PNG_2510101623/skip-back-mini-line.png" class="w-4 h-4" />
             Previous
           </button>
 
           <button
             id="nxt"
+            type="submit"
             class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
             Next
-            <img src="skip-forward-mini-line.png" class="w-4 h-4" />
+            <img src="images/RemixIcon_PNG_2510101623/skip-forward-mini-line.png" class="w-4 h-4" />
           </button>
         </div>
 
@@ -42,12 +46,16 @@
         <div class="flex justify-between mt-5">
           <button
             id="restart"
+            type="submit"
             class="bg-[#005e7c] hover:bg-[#0094c6] text-white px-4 py-2 rounded-md flex items-center gap-2 transition">
-            <img src="refresh-line.png" class="w-4 h-4" />
+            <img src="images/RemixIcon_PNG_2510101623/refresh-line.png" class="w-4 h-4" />
             Restart
           </button>
 
-          <button id="submit" class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md transition">
+          <button
+            id="submit"
+            type="submit"
+            class="bg-[#0094c6] hover:bg-[#005e7c] text-white px-4 py-2 rounded-md transition">
             Submit
           </button>
         </div>
@@ -65,4 +73,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
