--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <header class="bg-gray-50 text-[#001242] sticky top-0 shadow">
       <div class="max-w-5xl mx-auto flex justify-between items-center px-6 py-4">
         <h2
-          class="text-2xl md:text-3xl font-extrabold tracking-widest text-[#000022]
-                 relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-1/2 after:h-[3px]
-                 after:bg-[#0094c6] after:rounded-full hover:after:w-full after:transition-all after:duration-500
-                 hover:text-[#005e7c] transition-colors duration-500 select-none">
+          class="text-2xl md:text-3xl font-extrabold tracking-widest text-[#000022] relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-1/2 after:h-[3px] after:bg-[#0094c6] after:rounded-full hover:after:w-full after:transition-all after:duration-500 hover:text-[#005e7c] transition-colors duration-500 select-none">
           ACER-QUIZ
         </h2>
         <nav class="flex gap-6 text-sm font-medium">
